--- a/index.html
+++ b/index.html
@@ -10,69 +10,78 @@
 </head>
 
 <body>
-    <header></header>
-    <nav>
-        <h1>HTML</h1>
-        <table id="float">
-            <ul>
-                <tr>
-                    <th>
-                        <li><a href="#Introduction"> Introduction</a></li>
-                    </th>
-                </tr>
+    <header>
 
-                <tr>
-                    <th>
-                        <li><a href="#Editors"> Editors</a> </li>
-                    </th>
-                </tr>
+        <nav>
 
-                <tr>
-                    <th>
-                        <li><a href="#Elements"> Elements</a></li>
-                    </th>
-                </tr>
+            <h1>HTML</h1>
+            <div id="scroll_bar">
+                <table id="float">
+                    <ul>
+                        <tr>
+                            <th>
+                                <li><a href="#Introduction"> Introduction</a></li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Attributes"> Attributes</a> </li>
-                    </th>
-                </tr>
+                        <tr>
+                            <th>
+                                <li><a href="#Editors"> Editors</a> </li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Heading"> Heading</a> </li>
-                    </th>
-                </tr>
+                        <tr>
+                            <th>
+                                
+                                <li><a href="#Elements"> Elements</a></li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Paragraph"> Paragraph</a> </li>
-                    </th>
-                </tr>
+                        <tr>
+                            <th>
+                                <li><a href="#Attributes"> Attributes</a> </li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Formatting">Formatting</a></li>
-                    </th>
-                </tr>
+                        <tr>
+                            <th>
+                                <li><a href="#Heading"> Heading</a> </li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Style"> Style</a></li>
-                    </th>
-                </tr>
+                        <tr>
+                            <th>
+                                <li><a href="#Paragraph"> Paragraph</a> </li>
+                            </th>
+                        </tr>
 
-                <tr>
-                    <th>
-                        <li><a href="#Reference"> Reference</a> </li>
-                    </th>
+                        <tr>
+                            <th>
+                                <li><a href="#Formatting">Formatting</a></li>
+                            </th>
+                        </tr>
 
-                </tr>
-            </ul>
-        </table>
-    </nav>
+                        <tr>
+                            <th>
+                                <li><a href="#Style"> Style</a></li>
+                            </th>
+                        </tr>
+
+                        <tr>
+                            <th>
+                                <li><a href="#Reference"> Reference</a> </li>
+                            </th>
+
+                        </tr>
+                    </ul>
+                </table>
+            </div>
+
+        </nav>
+
+    </header>
     <br>
+
 
     <main>
 
@@ -156,8 +165,10 @@
             <p>In HTML, we have many special elements that can provide special meaning to text content. </p>
 
             <section>
-                <div> <a href="#Reference">
-                        HTML Elements</a>Description </div>
+                <!-- for spacing btw html and description use this &nbsp;  -->
+                <div> 
+                        HTML Elements &nbsp; 
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Description</a>  </div>
                 <div>
                     <ol>
                         <li> Bold the text</li>
